# app-brewdict-io

./: README.md  build.gradle.kts  settings.gradle.kts
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/cpp/: BrewdictPredictionModel.mat  CMakeLists.txt  CompactEnsemble.c  CompactEnsemble.h  CompactRegressionTree.c  CompactRegressionTree.h  brewdict.cpp  defines.txt  predict.c  predict.h  predictOneWithCache.c  predictOneWithCache.h  predict_data.c  predict_data.h  predict_initialize.c  predict_initialize.h  predict_internal_types.h  predict_terminate.c  predict_terminate.h  predict_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  updateCache.c  updateCache.h
androidApp/src/main/java/io/brewdict/application/android/: Brewdict.kt  DashboardActivity.kt  MainActivity.kt  Result.kt
androidApp/src/main/java/io/brewdict/application/android/models/: LoggedInUser.kt  LoginDataSource.kt  LoginRepository.kt  UserPreviewParameterProvider.kt
androidApp/src/main/java/io/brewdict/application/android/utils/: ComponentsUI.kt  IndexResourceViewModel.kt  MultiToggleButtonEnum.kt  SharedComponents.kt  SortingFieldEnum.kt  ViewPagerAdapter.kt
androidApp/src/main/res/layout/: activity_dashboard.xml  activity_landing.xml  fragment_add_edit_recipe.xml  fragment_dashboard.xml  fragment_fermentations.xml  fragment_login.xml  fragment_profile.xml  fragment_readings.xml  fragment_recipes.xml  fragment_register.xml  fragment_styles.xml  fragment_view_fermentation.xml  fragment_view_recipe.xml
androidApp/src/main/res/menu/: bottom_nav_menu.xml
androidApp/src/main/res/navigation/: mobile_navigation.xml
androidApp/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
iosApp/iosApp.xcodeproj/project.xcworkspace/xcuserdata/mlbarker.xcuserdatad/: UserInterfaceState.xcuserstate
shared/: build.gradle.kts
shared/src/androidMain/: AndroidManifest.xml
shared/src/androidMain/kotlin/io/brewdict/application/: Platform.kt
shared/src/androidMain/kotlin/io/brewdict/application/api_consumption/: API.kt  AuthenticatedAPI.kt  AuthenticationEndpoint.kt  CRUDEndpoint.kt  Endpoint.kt  Result.kt
shared/src/androidMain/kotlin/io/brewdict/application/api_consumption/models/: Model.kt  (+3 more)
shared/src/androidTest/kotlin/io/brewdict/application/: androidTest.kt
shared/src/commonMain/kotlin/io/brewdict/application/: Greeting.kt  Platform.kt
shared/src/commonTest/kotlin/io/brewdict/application/: commonTest.kt
shared/src/iosMain/kotlin/io/brewdict/application/: Platform.kt
shared/src/iosTest/kotlin/io/brewdict/application/: iosTest.kt
(+77 files in other folders)
